@@ -1,3 +1,8 @@
+Wed 9 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>
+
+    * contrib/doc2html/doc2html.pl, installdir/mime.types:
+      Add support for OpenOffice.org documents (#957305)
+
 Sat 5 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>
 
     * test/t_htdig, test/t_factors: fix tests for non-gnu/linux systems.
